# justoj-core-client

./: .gitignore  CMakeLists.txt  Makefile  README.md  authorized_keys  client.c  install-tools.sh  install.bash  justoj-cpu-benchmark.c  justoj_core.c  justoj_core_client.c  sources.list
config-example/: judge.conf
dockerfiles/gcc/: Dockerfile  install-tools.sh
docs/: install.sh  stop-all-cores
include/: compile.h  data_monitor.h  defines.h  init_syscalls.h  judge_http_api.h  ncalls.h  oj_result_text.h  okcalls.h  solution_info.h  solution_queue.h  str_utils.h  system_info.h  utils.h  version.h  watch_solutions.h  wget_utils.h
solution-fedebb89b607ace4/: code  config
solution-fedebb89b607ace4/data/: data1.in  data1.out  data2.in  data2.out  data3.in  data3.out  data4.in  data4.out  data5.in  data5.out
solutions/1000-guile-ac/: code  config
solutions/1848-go-ac/: code  config
solutions/1848-js-ac/: code  config
solutions/1848-sbcl-ac/: code  config
solutions/2405-java-ac/: code  config
solutions/2405-java-ac/data/: 1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
solutions/2550-c-ac/: code  config
